--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <main>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell-div"></div>
+        <div class="cell-div"></div>
+        <div class="cell-div"></div>
+        <div class="cell-div"></div>
+        <div class="cell-div"></div>
+        <div class="cell-div"></div>
+        <div class="cell-div"></div>
+        <div class="cell-div"></div>
+        <div class="cell-div"></div>
     </main>
+    <div class="game-details-div">
+        <section class="players-turn-section">
+            Player 1's turn
+        </section>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
