--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <main>
-        <div class="cell-div"></div>
-        <div class="cell-div"></div>
-        <div class="cell-div"></div>
-        <div class="cell-div"></div>
-        <div class="cell-div"></div>
-        <div class="cell-div"></div>
-        <div class="cell-div"></div>
-        <div class="cell-div"></div>
-        <div class="cell-div"></div>
+        <div class="cell-div">0</div>
+        <div class="cell-div">1</div>
+        <div class="cell-div">2</div>
+        <div class="cell-div">3</div>
+        <div class="cell-div">4</div>
+        <div class="cell-div">5</div>
+        <div class="cell-div">6</div>
+        <div class="cell-div">7</div>
+        <div class="cell-div">8</div>
     </main>
     <div class="game-details-div">
         <section class="players-turn-section">
