--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="container animate__animated animate__slideInUp">
         <div class="grid-container">
             <div class="cell-div" style="border-top: none; border-left: none;"></div>
             <div class="cell-div" style="border-top: none;"></div>
