Updated to included design changes and change checkForWinner ftn to be scalable

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="game-over-div animate__animated animate__fadeIn" hidden>
             <div class="winner-div"></div>
-            <button class="reset-btn">Reset</button>
+            <button class="reset-btn">New Game</button>
         </div>
     </div>
     
