--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             </div>   
             
             <button class="reset-btn">Reset</button>
+
+            <button class="reset-btn">Change Players</button>
         </aside>
     </main>
     
