Updated to include warning message if the player doesn't enter their name

--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
         <div class="user-input-popup">
             <section class="player-x-details">
                 Enter your name Player One:
-                <input type="text">
+                <input type="text" placeholder="Player One Name">
             </section>
             <section class="player-o-details">
                 Enter your name Player Two:
-                <input type="text">
+                <input type="text" placeholder="Player Two Name">
             </section>
 
             <button class="start-game">Start Playing</button>
+            <div class="under-input-alert">Please Enter Both Players Name</div>
         </div> 
         
         <aside>
